--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap-css-only/css/bootstrap.min.css";
+@import "~font-awesome/css/font-awesome.min.css";
+
+body { padding-top: 70px; }
+@media screen and (max-width: 768px) {
+  body { padding-top: 70px; }
+}
