--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
   <hr>
   <p class="text-muted">
     <small>
-      <i class="fa fa-copyright" aria-hidden="true"> 2019 COLOSSI DATA-NAUTS</i>
+      <i class="fa fa-copyright" aria-hidden="true"> 2019 DATA-NAUTS</i>
     </small>
   </p>
 </div>
