--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
 
     </div>
   </div>
-  <div class="text-right">
+  <div class="text-right mt-2">
     <button type="button" class="btn btn-success" (click)="upload()">Submit Data</button>
   </div>
 </div>
