--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,4 +17,7 @@
   <div class="text-right mt-2">
     <button type="button" class="btn btn-success" (click)="upload()">Submit Data</button>
   </div>
+  <app-graphing></app-graphing>
+  <app-dot-plot></app-dot-plot>
 </div>
+
