--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,33 @@
   <div class="text-right mt-2">
     <button type="button" class="btn btn-success" (click)="upload()">Submit Data</button>
   </div>
-  <app-graphing></app-graphing>
+
+  <div class="card mt-4" *ngIf="resultObservable|async; let result">
+    <div class="card-body">
+      <div class="row">
+        <div class="col-8">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Summary statistics</th>
+                <th scope="col">Frequency</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr (mouseover)="sendBoxPlotData(r['Var1'])" *ngFor="let r of result['summaryStats']">
+                <td>{{r['Var1']}}</td>
+                <td>{{r['Freq']}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-4">
+          <app-graphing></app-graphing>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <app-dot-plot></app-dot-plot>
 </div>
 
